# SmartChecklist

./: .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  README_SMARTCHECKLIST.md  app.py  docker-compose.yml  init_database.py  production-requirements.txt  pyproject.toml  schema.sql  sync_and_build.sh
Documentation/: BUILD_README.md  DATABASE_PERSISTENCE_DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  QUICK_DEPLOYMENT_REFERENCE.md  README.md
Documentation/Features/: API_DOCUMENTATION.md  DELETE_FEATURE_IMPLEMENTATION.md  FEATURES_DOCUMENTATION.md  IMPLEMENTATION_SUMMARY.md
smartchecklist/: __init__.py  app.py
smartchecklist/static/: script.js  styles.css
smartchecklist/templates/: checklist.html  dashboard.html  login.html  register.html
static/: script.js  styles.css
templates/: base.html  checklist.html  dashboard.html  login.html  splash.html
tests/: README.md  test_api.py
